--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <option value="tv">Series</option>
         </select>
     </div>
+    <!-- Nuevo contenedor para mostrar el título y la información de temporada/episodio -->
+    <div id="currentContentInfo" style="margin-top: 20px; font-size: 18px; font-weight: bold;"></div>
     <div id="results"></div>
     <div id="player" style="margin-top: 20px; display: none;">
         <iframe src="https://vidsrc.me/" referrerpolicy="origin" width="600" height="400"></iframe>
