--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador de Películas y Series</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="referrer" content="origin" />
 </head>
 <body>
     <h1>Buscador de Películas y Series</h1>
@@ -18,9 +17,7 @@
         </select>
     </div>
     <div id="results"></div>
-    <div id="player" style="margin-top: 20px; display: none;">
-        <iframe src="https://vidsrc.me/" referrerpolicy="origin" width="600" height="400"></iframe>
-    </div>
+    <div id="player" style="margin-top: 20px; display: none;"></div>
     <div id="imdbIdDisplay" style="margin-top: 20px;"></div>
     <div id="episodeControls" style="display: none; margin-top: 20px;">
         <button id="prevSeason">Temporada Anterior</button>
@@ -31,5 +28,6 @@
         <button id="nextEpisode">Siguiente Episodio</button>
     </div>
     <script src="app.js"></script>
+	<div id="particles"></div>
 </body>
 </html>
